--- a/AdoptionSystem-main/package.json
+++ b/AdoptionSystem-main/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
-  "author": "JN (Josué Noj)",
+  "author": "Juan Jose Pineda Soto",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
